Vote and professor image view and create